--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+@font-face {
+  font-family: Flubber;
+  src: url(data-files/Flubber.ttf);
+}
+
 body {
   height: 100vh;
   width: 100vw;
   background: rgb(255, 192, 156);
 }
+
+/*BG open*/
 
 .question {
   background-color: white;
@@ -22,6 +29,10 @@ body {
   .subdiv {
     display: flex;
     margin-top: -80px;
+    position: relative;
+    /* animation-name: WaterFall;
+    animation-iteration-count: infinite;
+    animation-duration: 5s; */
   }
   .subdiv:first-child {
     margin-top: 0;
@@ -73,4 +84,24 @@ body {
     opacity: 1;
     transform: scale(1);
   }
+}
+
+@keyframes WaterFall {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100%);
+    opacity: 1;
+  }
+}
+/*BG close*/
+
+h1 {
+  font-family: Flubber, sans-serif;
+  text-align: center;
+  font-size: 80px;
+  padding: 20px;
+  color: rgb(68, 17, 5);
 }
