--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 /*BG open*/
 
 .question {
-  background-color: white;
+  background-color: rgba(255, 243, 221, 0.9);
   width: 150px;
   height: 156px;
   mask-image: url(imgs/question.png);
@@ -30,9 +30,6 @@ body {
     display: flex;
     margin-top: -80px;
     position: relative;
-    /* animation-name: WaterFall;
-    animation-iteration-count: infinite;
-    animation-duration: 5s; */
   }
   .subdiv:first-child {
     margin-top: 0;
@@ -42,47 +39,47 @@ body {
 @keyframes fadeInOut {
   0% {
     opacity: 1;
-    transform: scale(1);
+    transform: scale(1) rotate(-3deg);
   }
   10% {
     opacity: 0.8;
-    transform: scale(0.2);
+    transform: scale(0.2) rotate(-5deg);
   }
   20% {
     opacity: 0.3;
-    transform: scale(0.8);
+    transform: scale(0.8) rotate(-2deg);
   }
   30% {
     opacity: 0.7;
-    transform: scale(0.3);
+    transform: scale(0.3) rotate(0deg);
   }
   40% {
     opacity: 1;
-    transform: scale(1.2);
+    transform: scale(1.2) rotate(2deg);
   }
   50% {
     opacity: 0.5;
-    transform: scale(0.4);
+    transform: scale(0.4) rotate(5deg);
   }
   60% {
     opacity: 0.3;
-    transform: scale(0.7);
+    transform: scale(0.7) rotate(3deg);
   }
   70% {
     opacity: 0.1;
-    transform: scale(0.5);
+    transform: scale(0.5) rotate(-2deg);
   }
   80% {
     opacity: 0.4;
-    transform: scale(0.1);
+    transform: scale(0.1) rotate(0deg);
   }
   90% {
     opacity: 0.6;
-    transform: scale(1.1);
+    transform: scale(1.1) rotate(1deg);
   }
   100% {
     opacity: 1;
-    transform: scale(1);
+    transform: scale(1) rotate(-3deg);
   }
 }
 
