--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 }
 
 #bg {
+  pointer-events: none;
   width: 100vw;
   height: 100vh;
   position: fixed;
@@ -101,4 +102,50 @@ h1 {
   font-size: 80px;
   padding: 20px;
   color: rgb(68, 17, 5);
+}
+
+#loading {
+  width: 60px;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  position: relative;
+  animation-name: loading;
+  animation-iteration-count: infinite;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+}
+
+#loading::after {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 7px solid rgb(255, 166, 83);
+  mask-image: linear-gradient(to top, transparent 50%, black 50%);
+  mask-position: center right;
+  mask-size: 30px 60px;
+  mask-repeat: no-repeat;
+  border-radius: 50%;
+  content: "";
+}
+
+#loading::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 7px solid rgb(255, 166, 83);
+  mask-image: linear-gradient(-65deg, transparent 20%, black 50%);
+  mask-position: center left;
+  mask-size: 33px 60px;
+  mask-repeat: no-repeat;
+  border-radius: 50%;
+  content: "";
+}
+
+@keyframes loading {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(359deg);
+  }
 }
