--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
   src: url(data-files/Flubber.ttf);
 }
 
+@font-face {
+  font-family: Raleway;
+  src: url(data-files/Raleway-SemiBold.ttf);
+}
+
 body {
   height: 100vh;
   width: 100vw;
@@ -104,6 +109,8 @@ h1 {
   color: rgb(68, 17, 5);
 }
 
+/*initializing open*/
+
 #loading {
   width: 60px;
   aspect-ratio: 1/1;
@@ -149,3 +156,22 @@ h1 {
     transform: rotate(359deg);
   }
 }
+
+#initializing {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 10px rgb(182, 110, 110) inset;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgb(255, 197, 155);
+  border: 30px double rgb(255, 72, 72);
+  font-family: Raleway, sans-serif;
+  font-size: 50px;
+}
+
+/*initializing close*/
