--- a/style.css
+++ b/style.css
@@ -175,3 +175,17 @@ h1 {
 }
 
 /*initializing close*/
+
+#opening {
+  width: 80%;
+  height: 90%;
+  background-color: rgb(255, 197, 155);
+  box-shadow: 0px 0px 5px rgb(255, 174, 174),
+    0px 0px 10px rgb(182, 110, 110) inset, 0px 0px 10px rgb(182, 110, 110);
+  border: 30px double rgb(255, 72, 72);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50px;
+}
