--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
   height: 100vh;
   width: 100vw;
   background: rgb(255, 192, 156);
+  --peach: rgb(255, 192, 156);
+  --shadow: rgb(182, 110, 110);
 }
 
 /*BG open*/
@@ -104,7 +106,8 @@ body {
 h1 {
   font-family: Flubber, sans-serif;
   text-align: center;
-  font-size: 80px;
+  width: 100%;
+  font-size: 7em;
   padding: 20px;
   color: rgb(68, 17, 5);
 }
@@ -180,12 +183,28 @@ h1 {
   width: 80%;
   height: 90%;
   background-color: rgb(255, 197, 155);
-  box-shadow: 0px 0px 5px rgb(255, 174, 174),
-    0px 0px 10px rgb(182, 110, 110) inset, 0px 0px 10px rgb(182, 110, 110);
+  box-shadow: 0px 0px 5px rgb(255, 174, 174), 0px 0px 10px var(--shadow) inset,
+    0px 0px 10px var(--shadow);
   border: 30px double rgb(255, 72, 72);
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 50px;
+}
+
+.button {
+  width: 100px;
+  aspect-ratio: 1/1;
+  background: green;
+  border-radius: 50%;
+  position: relative;
+}
+
+.button::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
