--- a/style.css
+++ b/style.css
@@ -290,12 +290,26 @@ h1 {
 }
 
 .card {
+  font-family: Raleway;
+  cursor: pointer;
+  color: black;
   aspect-ratio: 1/1;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px var(--shadow);
+  transition: 0.2s;
   .card-title {
     text-align: center;
   }
   .card-img-top {
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
     height: 75%;
     object-fit: cover;
   }
+}
+
+.card:hover {
+  transform: scale(1.06);
+  box-shadow: 0px 0px 20px var(--shadow), 0px 0px 5px black;
+  transition: 0.2s;
 }
