--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   --peach: rgb(255, 192, 156);
   --shadow: rgb(182, 110, 110);
   --red: rgb(255, 72, 72);
+  --light-peach: rgb(255, 213, 189);
 }
 
 /*BG open*/
@@ -186,7 +187,7 @@ h1 {
 #opening {
   width: 80%;
   height: 90%;
-  background-color: rgb(255, 197, 155);
+  background-color: var(--light-peach);
   box-shadow: 0px 0px 5px rgb(255, 174, 174), 0px 0px 10px var(--shadow) inset,
     0px 0px 10px var(--shadow);
   border: 30px double var(--red);
@@ -206,7 +207,7 @@ h1 {
 #stories {
   width: 80%;
   height: 90%;
-  background-color: rgb(255, 197, 155);
+  background-color: var(--light-peach);
   box-shadow: 0px 0px 5px rgb(255, 174, 174), 0px 0px 10px var(--shadow) inset,
     0px 0px 10px var(--shadow);
   border: 30px double var(--red);
@@ -216,15 +217,21 @@ h1 {
   transform: translate(-50%, -50%);
   border-radius: 50px;
   padding: 5px;
-  padding-bottom: 20px;
+  padding-bottom: 30px;
   box-sizing: border-box;
   transform-origin: 0% 0%;
+  overflow-y: auto;
+  overflow-x: clip;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
   h1 {
     font-size: 5em;
   }
   .row {
     border-top: 10px double var(--red);
-    padding: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     height: 83%;
     overflow-y: auto;
     scrollbar-width: 0;
@@ -234,6 +241,10 @@ h1 {
   .row::-webkit-scrollbar {
     display: none; /* Safari and Chrome */
   }
+}
+
+#stories::-webkit-scrollbar {
+  display: none;
 }
 
 .button {
