--- a/style.css
+++ b/style.css
@@ -324,3 +324,88 @@ h1 {
   box-shadow: 0px 0px 20px var(--shadow), 0px 0px 5px black;
   transition: 0.2s;
 }
+
+.fadeIn_initialize {
+  animation-name: fadeIn_initialize;
+  animation-fill-mode: forwards;
+  animation-duration: 0.1s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+}
+
+@keyframes fadeIn_initialize {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeOut_initialize {
+  animation-name: fadeOut_initialize;
+  animation-fill-mode: forwards;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+}
+
+@keyframes fadeOut_initialize {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+#prompt {
+  position: fixed;
+  aspect-ratio: 3/2;
+  background: green;
+  z-index: 6;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50px;
+  border: 15px double var(--red);
+  background: var(--light-peach);
+  box-sizing: border-box;
+  box-shadow: 0px 0px 20px black, 0px 0px 50px var(--shadow);
+  h1 {
+    font-family: Raleway, sans-serif;
+    font-size: 30px;
+    height: 50%;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    width: 100%;
+    border-bottom: 5px solid var(--red);
+    margin-bottom: 0;
+  }
+  .inputs {
+    height: 50%;
+    width: 100%;
+    display: flex;
+    align-items: start;
+    border-top: 5px solid var(--red);
+    margin-top: 2px;
+    padding-top: 10px;
+    input[type="text"] {
+      width: 80%;
+      height: 30%;
+    }
+    input[type="submit"] {
+      width: 20%;
+      height: 30%;
+    }
+  }
+}
+
+.zoomIn_prompts {
+
+}
+
+@keyframes zoomIn_prompts {
+  
+}
