--- a/style.css
+++ b/style.css
@@ -421,3 +421,23 @@ h1 {
     transform: translate(-50%, -50%) scale(1);
   }
 }
+
+.leave {
+  animation-name: leave;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes leave {
+  0% {
+    transform: translate(-50%, -50%) scale(1);
+  }
+  50% {
+    transform: translate(-50%, -50%) scale(0.8);
+  }
+  to {
+    transform: translate(-250%, -50%) scale(0.8);
+  }
+}
