--- a/style.css
+++ b/style.css
@@ -109,10 +109,16 @@ h1 {
   font-family: Flubber, sans-serif;
   text-align: center;
   width: 100%;
-  font-size: 7em;
+  font-size: 5em;
   padding: 20px;
   color: rgb(68, 17, 5);
   overflow-wrap: anywhere;
+}
+
+@media screen and (max-width: 576px) {
+  h1 {
+    font-size: 3em;
+  }
 }
 
 /*initializing open*/
@@ -378,14 +384,14 @@ h1 {
     font-size: 30px;
     height: 50%;
     display: flex;
-    align-items: end;
+    align-items: center;
     justify-content: center;
     width: 100%;
     border-bottom: 5px solid var(--red);
     margin-bottom: 0;
   }
   .inputs {
-    height: 50%;
+    height: 35%;
     width: 100%;
     display: flex;
     align-items: start;
@@ -393,13 +399,20 @@ h1 {
     margin-top: 2px;
     padding-top: 10px;
     input[type="text"] {
-      width: 80%;
-      height: 30%;
+      width: 75%;
+      height: 50%;
     }
     input[type="submit"] {
-      width: 20%;
-      height: 30%;
+      width: 25%;
+      height: 50%;
     }
+  }
+  #counter {
+    height: 15%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
