--- a/style.css
+++ b/style.css
@@ -413,6 +413,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: sans-serif;
   }
 }
 
@@ -441,6 +442,7 @@ h1 {
   animation-iteration-count: 1;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
+  pointer-events: none;
 }
 
 @keyframes leave {
@@ -452,5 +454,52 @@ h1 {
   }
   to {
     transform: translate(-250%, -50%) scale(0.8);
+  }
+}
+
+#progress {
+  width: 100%;
+  height: 35px;
+  background-color: rgba(255, 218, 218, 0.486);
+  position: fixed;
+  bottom: 0;
+  margin: 0;
+  left: 0;
+  backdrop-filter: blur(10px);
+  border-top: 5px solid var(--red);
+  #progressor {
+    position: absolute;
+    background: rgba(0, 117, 107, 0.479);
+    width: 100%;
+    height: 100%;
+  }
+}
+
+#content {
+  width: 80%;
+  height: 90%;
+  background-color: var(--light-peach);
+  box-shadow: 0px 0px 5px rgb(255, 174, 174), 0px 0px 10px var(--shadow) inset,
+    0px 0px 10px var(--shadow);
+  border: 30px double var(--red);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50px;
+  padding: 5px;
+  padding-bottom: 30px;
+  box-sizing: border-box;
+  transform-origin: 0% 0%;
+  overflow-y: auto;
+  overflow-x: clip;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+  p {
+    font-size: 20px;
+    font-family: Raleway, sans-serif;
+    padding: 10px;
+  }
+  .speakButton {
   }
 }
