--- a/style.css
+++ b/style.css
@@ -525,6 +525,7 @@ h1 {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
     top: 0;
   }
   h1::after {
