--- a/style.css
+++ b/style.css
@@ -420,7 +420,7 @@ h1 {
 .zoomIn_prompt {
   animation-name: zoomIn_prompts;
   animation-fill-mode: forwards;
-  animation-duration: 0.5s;
+  animation-duration: 0.35s;
   animation-timing-function: ease-in-out;
   animation-iteration-count: 1;
 }
@@ -438,7 +438,7 @@ h1 {
 
 .leave {
   animation-name: leave;
-  animation-duration: 1s;
+  animation-duration: 0.75s;
   animation-iteration-count: 1;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
@@ -538,7 +538,7 @@ h1 {
     background: var(--red);
     transform: translateX(-50%);
   }
-  /* .bottom {
+  .bottom {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -548,28 +548,39 @@ h1 {
     width: 100%;
     background: var(--light-peach);
     mask-image: linear-gradient(to top, black 60%, transparent);
-    padding-top: 20px; */
-  span {
-    align-self: center;
-    cursor: pointer;
-    font-size: 30px;
-    padding: 0;
-    margin: 0;
-    position: relative;
+    padding-top: 20px;
+    span {
+      align-self: center;
+      cursor: pointer;
+      font-size: 30px;
+      padding: 0;
+      margin: 0;
+      position: relative;
+    }
+    span::after {
+      content: "";
+      width: 0;
+      height: 3px;
+      position: absolute;
+      bottom: 5px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0, 117, 107, 0.479);
+      transition: 0.4s;
+    }
+    span:hover::after {
+      width: 100%;
+      transition: 0.2s;
+    }
   }
-  span::after {
-    content: "";
-    width: 0;
-    height: 3px;
-    position: absolute;
-    bottom: 5px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: rgba(0, 117, 107, 0.479);
-    transition: 0.4s;
-  }
-  span:hover::after {
-    width: 100%;
-    transition: 0.2s;
-  }
+}
+
+input:focus {
+  outline: none;
+}
+
+.black_border {
+  border: 1px solid black;
+  border-radius: 2px;
+  filter: brightness(95%);
 }
