--- a/style.css
+++ b/style.css
@@ -469,9 +469,17 @@ h1 {
   border-top: 5px solid var(--red);
   #progressor {
     position: absolute;
+    display: flex;
+    align-items: center;
     background: rgba(0, 117, 107, 0.479);
     width: 100%;
     height: 100%;
+    #percentage {
+      position: absolute;
+      right: 5px;
+      color: black;
+      font-family: Raleway, sans-serif;
+    }
   }
 }
 
@@ -488,6 +496,8 @@ h1 {
   transform: translate(-50%, -50%);
   border-radius: 50px;
   padding-bottom: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
   box-sizing: border-box;
   transform-origin: 0% 0%;
   overflow-y: auto;
@@ -503,6 +513,7 @@ h1 {
     width: 100%;
     line-height: 28px;
     text-indent: 50px;
+    text-align: justify;
   }
   .speakButton {
     max-width: 40%;
@@ -542,13 +553,11 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
-    position: fixed;
+    border-top: 5px solid var(--red);
+    height: 80px;
     bottom: 0;
     width: 100%;
-    background: var(--light-peach);
-    mask-image: linear-gradient(to top, black 60%, transparent);
-    padding-top: 20px;
+    padding-top: 23px;
     span {
       align-self: center;
       cursor: pointer;
