--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   --shadow: rgb(182, 110, 110);
   --red: rgb(255, 72, 72);
   --light-peach: rgb(255, 213, 189);
+  --transp-teal: rgba(0, 117, 107, 0.479);
 }
 
 /*BG open*/
@@ -398,13 +399,23 @@ h1 {
     border-top: 5px solid var(--red);
     margin-top: 2px;
     padding-top: 10px;
+    input {
+      font-family: Raleway, sans-serif;
+    }
     input[type="text"] {
       width: 75%;
       height: 50%;
+      background: rgba(255, 255, 255, 0.644);
+      border: 1px solid var(--red);
+      border-radius: 3px;
+      padding-left: 10px;
     }
     input[type="submit"] {
       width: 25%;
       height: 50%;
+      background-color: rgba(255, 72, 72, 0.644);
+      border: 1px solid var(--transp-teal);
+      border-radius: 3px;
     }
   }
   #counter {
@@ -471,7 +482,7 @@ h1 {
     position: absolute;
     display: flex;
     align-items: center;
-    background: rgba(0, 117, 107, 0.479);
+    background: var(--transp-teal);
     width: 100%;
     height: 100%;
     #percentage {
@@ -575,7 +586,7 @@ h1 {
       bottom: 5px;
       left: 50%;
       transform: translateX(-50%);
-      background: rgba(0, 117, 107, 0.479);
+      background: var(--transp-teal);
       transition: 0.4s;
     }
     span:hover::after {
@@ -593,4 +604,23 @@ input:focus {
   border: 1px solid black;
   border-radius: 2px;
   filter: brightness(95%);
+}
+
+.redden {
+  animation-name: reddening;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes reddening {
+  0% {
+    background-color: rgba(255, 255, 255, 0.644);
+  }
+  50% {
+    background-color: rgba(255, 133, 133, 0.644);
+  }
+  100% {
+    background-color: rgba(255, 255, 255, 0.644);
+  }
 }
