--- a/style.css
+++ b/style.css
@@ -319,8 +319,15 @@ h1 {
   border-radius: 20px;
   box-shadow: 0px 0px 10px var(--shadow);
   transition: 0.2s;
+  padding: 0 !important;
   .card-title {
     text-align: center;
+    width: 100%;
+    margin: 0 !important;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .card-img-top {
     border-top-right-radius: 20px;
@@ -607,7 +614,7 @@ input:focus {
 .black_border {
   border: 1px solid black;
   border-radius: 2px;
-  filter: brightness(95%);
+  filter: brightness(85%);
 }
 
 .redden {
